--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,7 @@
-# This is a basic workflow to help you get started with Actions
-
+# Main workflow to build project
 name: CI
-
-# Controls when the workflow will run
 on:
   pull_request
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
