--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,6 @@
 # Main workflow to build project
 name: CI
-on:
-  pull_request
-  workflow_dispatch
+on: [pull_request, workflow_dispatch]
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -14,8 +12,6 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       - name: Install XcodeGen
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
         run: brew install xcodegen
       - name: Run XcodeGen
         run: xcodegen
