--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,10 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install XcodeGen
         run: brew install xcodegen
+      - name: Install Danger 
+        run: brew install danger/tap/danger-swift
       - name: Run XcodeGen
         run: xcodegen
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Danger
+        run: danger-swift ci
