--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,3 +20,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Danger
         run: danger-swift ci
+        env:
+          GITHUB_TOKEN: ${{ secrets.PRIVATE_REPO }}
