--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,12 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install XcodeGen
         run: brew install xcodegen
+      - name: Install Danger 
+        run: brew install danger/tap/danger-swift
       - name: Run XcodeGen
         run: xcodegen
       # Runs a set of commands using the runners shell
       - name: Danger
-        uses: danger/swift@3.13.0
+        run: danger-swift ci
         env:
-          GITHUB_TOKEN: ${{ secrets.PRIVATE_REPO }}
+          GITHUB_TOKEN: ${{ env.PRIVATE_REPO }}
